--- a/Pet-Story/src/app/donate/donate.component.html
+++ b/Pet-Story/src/app/donate/donate.component.html
@@ -35,9 +35,71 @@
           </div>
           <img src="{{ params }}" alt="{{ animal }}" />
         </div>
-        <div class="donate__amount"></div>
-        <div class="donate__form"></div>
-        <div class="donate__button"></div>
+        <div class="donate__amount">
+          <form [formGroup]="form" class="donate__form" (ngSubmit)="onSubmit()">
+            <div class="donate__inputs">
+              <input class="donate__form-item" type="radio" id="radio1" name="radios" value="5000" formControlName="radios">
+              <label for="radio1">
+                <div style="width: 30px;">
+                  <p class="item" style="text-align: center;">0</p>
+                  <p style="text-align: center;">5000</p>
+                </div>
+              </label>
+              <input class="donate__form-item" type="radio" id="radio2" name="radios" value="2500" formControlName="radios">
+              <label for="radio2">
+                <div style="width: 30px;">
+                  <p class="item" style="text-align: center;">0</p>
+                  <p style="text-align: center;">2500</p>
+                </div>
+              </label>
+              <input class="donate__form-item" type="radio" id="radio3" name="radios" value="1000" formControlName="radios">
+              <label for="radio3">
+                <div style="width: 30px;">
+                  <p class="item" style="text-align: center;">0</p>
+                  <p style="text-align: center;">1000</p>
+                </div>
+              </label>
+              <input class="donate__form-item" type="radio" id="radio4" name="radios" value="500" formControlName="radios">
+              <label for="radio4">
+                <div style="width: 30px;">
+                  <p class="item" style="text-align: center;">0</p>
+                  <p style="text-align: center;">750</p>
+                </div>
+              </label>
+              <input class="donate__form-item" type="radio" id="radio5" name="radios" value="250" formControlName="radios" checked>
+              <label for="radio5">
+                <div style="width: 30px;">
+                  <p class="item" style="text-align: center;">0</p>
+                  <p style="text-align: center;">500</p>
+                </div>
+              </label>
+              <input class="donate__form-item" type="radio" id="radio6" name="radios" value="100" formControlName="radios">
+              <label for="radio6">
+                <div style="width: 30px;">
+                  <p class="item" style="text-align: center;">0</p>
+                  <p style="text-align: center;">100</p>
+                </div>
+              </label>
+              <input class="donate__form-item" type="radio" id="radio7" name="radios" value="50" formControlName="radios">
+              <label for="radio7">
+                <div style="width: 30px;">
+                  <p class="item" style="text-align: center;">0</p>
+                  <p style="text-align: center;">50</p>
+                </div>
+              </label>
+              <input class="donate__form-item" type="radio" id="radio8" name="radios" value="25" formControlName="radios">
+              <label for="radio8">
+                <div style="width: 30px;">
+                  <p class="item" style="text-align: center;">0</p>
+                  <p style="text-align: center;">25</p>
+                </div>
+              </label>
+            </div>
+            <div class="donate__button"><button type="submit">Submit</button></div>
+          </form>
+        </div>
+        <div class="donate__option"></div>
+
         <p class="donate__share">Share with your friends on social networks</p>
       </div>
     </div>
