--- a/Pet-Story/src/app/donate/donate.component.scss
+++ b/Pet-Story/src/app/donate/donate.component.scss
@@ -4,7 +4,7 @@
   min-height: calc(100vh - 495px);
   background: $orange-grad;
   width: 100%;
-  
+
   &__image {
     height: 390px;
     max-width: 1600px;
@@ -28,11 +28,11 @@
   }
 
   &__reopen-title {
-    @include fonts(36px, 130%);    
+    @include fonts(36px, 130%);
   }
 
   &__reopen-content {
-    @include fonts(16px, 140%, 500); 
+    @include fonts(16px, 140%, 500);
   }
 
   &__pick-block {
@@ -76,7 +76,7 @@
 
   &__count {
     @include fonts(72px, 80%, 500);
-    text-align: center;    
+    text-align: center;
     color: $black;
     position: relative
   }
@@ -90,4 +90,30 @@
     left: -86px;
     width: 215px;
   }
+
+  &__inputs,
+  &__labels {
+    display: flex;
+    justify-content: space-between;
+    padding: 5px 20px;
+  }
+
+  input {
+    display: none;
+  }
 }
+
+input[type=radio]:checked+ label {
+  color: orange;
+  text-align: center;
+}
+
+input[type=radio]:checked + label p.item {
+  text-align: center;
+  border: 1px orange solid;
+  border-radius: 100%;
+}
+
+
+
+
